--- a/client/users.jade
+++ b/client/users.jade
@@ -137,7 +137,7 @@ template(name='users')
                     |Users
                 .ui.left.icon.huge.fluid.input
                     input.username_search(type='text' placeholder='lookup name...')
-                .ui.centered.cards
+                .ui.centered.four.cards
                     each users
                         +user
                 
