--- a/client/admin.jade
+++ b/client/admin.jade
@@ -5,7 +5,7 @@ template(name='admin')
 
 
 template(name='user_table')
-    a#add_user.ui.circular.basic.button(href='/user/add')
+    a#add_user.ui.basic.button(href='/user/add')
         i.plus.icon
         |Add User
     table.ui.sortable.striped.table
@@ -19,7 +19,7 @@ template(name='user_table')
             each users
                 tr
                     td 
-                        img.ui.small.circular.image(src="{{c.url image_id width=1000 height=1000 gravity='face' crop='crop'}}")
+                        img.ui.small.image(src="{{c.url image_id width=1000 height=1000 gravity='face' crop='crop'}}")
                     td 
                         a.ui.header(href="/user/#{username}")
                             |#{first_name} #{last_name}
@@ -34,14 +34,14 @@ template(name='user_table')
                         //- +user_role_toggle role='owner'
                         //- +user_role_toggle role='guest'
                     td
-                        a.ui.icon.large.circular.basic.button(href="/user/#{username}/edit")
+                        a.ui.icon.large.basic.button(href="/user/#{username}/edit")
                             i.pencil.icon
-                        a.ui.icon.large.circular.basic.button(href="/user/#{username}/")
+                        a.ui.icon.large.basic.button(href="/user/#{username}/")
                             i.chevron.right.icon
                         
 
 template(name='user_role_toggle')
     if is_in_role
-        .remove_role.ui.grey.circular.button #{role}
+        .remove_role.ui.grey.button #{role}
     else
-        .add_role.ui.basic.circular.button #{role}
+        .add_role.ui.basic.button #{role}
