--- a/client/nav.jade
+++ b/client/nav.jade
@@ -1,26 +1,26 @@
 template(name='nav')
     unless is_frontdesk
-        .ui.borderless.attached.massive.menu.topnav
+        .ui.borderless.attached.massive.inverted.menu
             //- a.toggle_sidebar.icon.item.sidebar_on
             //-     i.large.sidebar.icon
             if is_loading
                 .icon.item
-                    i.large.grey.loading.notched.circle.icon
+                    i.large.loading.notched.circle.icon
             else
                 a.header.icon.item(href='/' class="{{isActivePath '/'}}")
-                    //- i.grey.home.large.icon
-                    +i name='home-page'  
+                    i.home.large.large.icon
+                    //- +i name='home-page'  
                 if currentUser  
                     a.header.icon.set_model.item(href='/home' class="{{isActivePath '/home'}}")
-                        //- i.grey.th.large.icon
-                        +i name='squared-menu'    
+                        i.th.large.large.icon
+                        //- +i name='squared-menu'    
                 if is_staff
                     a.item(href='/staff' class="{{isActivePath '/staff'}}" title='staff')
                         //- +i name='employee-card'
-                        i.shield.grey.icon
+                        i.shield.large.icon
                         .mobile.hidden Staff
                     a.item(href='/users' class="{{isActivePath '/users'}}" title='Users')
-                        i.grey.users.icon
+                        i.users.large.icon
                         //- +i name='groups'
                         .mobile.hidden Users
                 //- a.item.set_marketplace(href='/m/marketplace' class="{{isActivePath '/m/marketplace'}}")
@@ -31,17 +31,17 @@ template(name='nav')
                 //-         |#{title}
                 if is_staff
                     a.item(href='/checkin' class="{{isActivePath '/checkin'}}" title='Health Club')
-                        i.grey.clinic.medical.icon
+                        i.clinic.medical.large.icon
                         //- +i name='treadmill'    
                         .mobile.hidden Health Club
             .right.menu
                 if is_admin
                     a.icon.item.set_task(href='/m/task' class="{{isActivePath '/m/task'}}")
-                        +i name='task'
-                        //- i.tasks.icon
+                        //- +i name='task'
+                        i.tasks.large.icon
                     a.icon.item.set_note(href='/m/note' class="{{isActivePath '/m/note'}}")
-                        +i name='note'
-                        //- i.note.icon
+                        //- +i name='note'
+                        i.note.large.icon
                 if currentUser
                     //- .item
                     //-     .ui.header(title='your karma') #{currentUser.karma}
@@ -54,34 +54,35 @@ template(name='nav')
                         //- if is_admin
                         //-     a.icon.item(href="/user/#{currentUser.username}" class="{{isActiveRoute regex='profile'}}")
                         //-         +i name='new-post'
-                                //- i.large.grey.mail.icon(class=mail_icon_class title="#{unread_count} Unread")
-                        if is_resident
+                                //- i.large.mail.icon(class=mail_icon_class title="#{unread_count} Unread")
+                        if is_user
                             a.icon.item(href="/chat" class="{{isActivePath '/chat'}}")
-                                +i name='filled-topic'
+                                //- +i name='filled-topic'
+                                i.chat.large.icon
                         //- if is_admin
                         //-     a.icon.item(href='/admin' class="{{isActivePath '/admin'}}")
                         //-         +i name='user shield'
                         if is_dev
                             a.item.set_model(href='/m/model' class="{{isActivePath '/m/model'}}")
                                 //- +i name='active directory'
-                                i.sitemap.icon
+                                i.sitemap.large.icon
                         unless is_frontdesk
                             a.item(href="/user/#{currentUser.username}" class="{{isActiveRoute regex='user_chat'}}")
                                 if currentUser.image_id
                                     img.ui.avatar.image(src="{{c.url currentUser.image_id width=100 height=100 gravity='face' crop='fill'}}")
                                 else
                                     //- +i name='user'
-                                    i.user.icon
+                                    i.user.large.icon
                                 //- | #{currentUser.username}
                     if logging_out
                         .item
-                            i.large.grey.loading.circle.notch.icon
+                            i.large.loading.circle.notch.icon
                     else
                         a#logout.ui.mobile.hidden.icon.item(href='#' title='Log Out')
-                            i.sign.out.grey.icon
+                            i.sign.out.icon
                 else
                     a.icon.item(href='/login' title='Login') 
-                        i.sign.in.large.grey.icon
+                        i.sign.in.large.icon
 
 
 template(name='sidebar')
@@ -155,18 +156,18 @@ template(name='footer')
         .ui.container.stackable.grid
             .eight.wide.column
                 //- +health_club_info
-                if is_user
-                    +ads
-                    form(action='https://www.paypal.com/cgi-bin/webscr', method='post', target='_top')
-                        input(type='hidden', name='cmd', value='_s-xclick')
-                        input(type='hidden', name='hosted_button_id', value='AUVHGYNUW5LVE')
-                        <input type="hidden" name="hosted_button_id" value="7SENHECABERS6" />
-                        // input(type='image', src='https://www.paypalobjects.com/en_US/i/btn/btn_donate_SM.gif', border='0', name='submit')
-                        //- <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
-                        img(alt='', border='0', src='https://www.paypal.com/en_US/i/scr/pixel.gif', width='1', height='1')
-                        button.ui.large.circular.icon.basic.button(type='submit')
-                            //- i.pied.piper.alternate.large.icon
-                            |donate
+                //- if is_user
+                //-     +ads
+                //-     form(action='https://www.paypal.com/cgi-bin/webscr', method='post', target='_top')
+                //-         input(type='hidden', name='cmd', value='_s-xclick')
+                //-         input(type='hidden', name='hosted_button_id', value='AUVHGYNUW5LVE')
+                //-         <input type="hidden" name="hosted_button_id" value="7SENHECABERS6" />
+                //-         // input(type='image', src='https://www.paypalobjects.com/en_US/i/btn/btn_donate_SM.gif', border='0', name='submit')
+                //-         //- <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
+                //-         img(alt='', border='0', src='https://www.paypal.com/en_US/i/scr/pixel.gif', width='1', height='1')
+                //-         button.ui.large.circular.icon.button(type='submit')
+                //-             //- i.pied.piper.alternate.large.icon
+                //-             |donate
                 
                 //- +health_club_info
                 if is_eric    
@@ -174,13 +175,14 @@ template(name='footer')
                         +role_switcher
             .eight.wide.column
                 unless currentUser
-                    a.ui.basic.circular.button(href='/login')
+                    a.ui.circular.button(href='/login')
                         i.sign.in.icon
                         |Login
                 if is_eric
                     with currentUser
                         +role_switcher
-        .row
-            .ui.center.aligned.grey.header
-                i.copyright.outline.icon
-                |Gold Run Community
+        if is_user
+            .row
+                .ui.center.aligned.header
+                    i.copyright.outline.icon
+                    |Gold Run Community
