--- a/components/delta/delta.jade
+++ b/components/delta/delta.jade
@@ -4,36 +4,36 @@ template(name='delta')
             .row
                 .six.wide.column
                     .ui.right.aligned.inline.header
-                        //- i.icon(class=icon)
-                        +i name=icon
+                        i.icon(class=icon)
+                        //- +i name=icon
                         | #{title}
                     unless is_loading
                         //- if is_admin
-                        .ui.icon.circular.big.basic.button.add_model_doc(title="Add #{title}")
-                            i.green.plus.large.icon
+                        .ui.icon.big.button.add_model_doc(title="Add #{title}")
+                            i.plus.large.icon
                         //- if can_edit
                             //- +edit_button
                         if is_admin
-                            .ui.icon.circular.basic.big.button.edit_model
+                            .ui.icon.big.button.edit_model
                                 i.cog.icon
                                 //- | Configure #{plural}
                         // .ui.divider
                         // // each sessions
-                        // //     .ui.icon.basic.button.select_session(class=session_selector_class title='select session')
+                        // //     .ui.icon.button.select_session(class=session_selector_class title='select session')
                         // //         i.play.icon
                         if current_delta
                             if is_dev
-                                .ui.icon.circular.basic.large.button.print_delta(title='Print Session Doc')
+                                .ui.icon.large.button.print_delta(title='Print Session Doc')
                                     i.code.icon
-                            .ui.reset.icon.circular.basic.large.button(title='Reload Session')
+                            .ui.reset.icon.large.button(title='Reload Session')
                                 i.refresh.icon
-                            .ui.delete_delta.icon.circular.basic.big.button(title='Delete Session')
+                            .ui.delete_delta.icon.big.button(title='Delete Session')
                                 i.trash.icon
                         else
-                            .create_delta.ui.big.circular.basic.button(title='new session')
+                            .create_delta.ui.big.button(title='new session')
                                 i.plus.icon
                                 |session
-                        .ui.basic.segment
+                        .ui.segment
                             |#{description}
                     // |did: #{session_delta_id}
                             
@@ -49,12 +49,12 @@ template(name='facet')
     if filtering_res
         div
         //- .ui.hidden.divider
-        .ui.styled.accordion
+        .ui.accordion
             .active.title
                 .ui.grey.small.inline.header 
                     if icon
-                        //- i.icon(class=icon)
-                        +i name=icon            
+                        i.icon(class=icon)
+                        //- +i name=icon            
                     if title
                         |#{title}
                     else 
@@ -68,12 +68,12 @@ template(name='facet')
                     //- div
                 each filtering_res
                     if name
-                        .selector.ui.circular.compact.button.toggle_selection(class=toggle_value_class title=count)
+                        .selector.ui.compact.button.toggle_selection(class=toggle_value_class title=count)
                             strong #{name}
                             if is_admin
                                 small #{cal_count} #{count}
                     else
-                        .selector.ui.circular.button.toggle_selection(class=toggle_value_class title=count)
+                        .selector.ui.button.toggle_selection(class=toggle_value_class title=count)
                             strong [null]
                             //- small #{cal_count}
 
@@ -114,24 +114,24 @@ template(name='delta_result')
             //- .extra
             //-     if tags
             //-         each tags
-            //-             .ui.circular.basic.label
+            //-             .ui.label
             //-                 |#{this}
                 //- +user_list_toggle key='bookmark_ids' icon='bookmark' label='Bookmark' color='red'
             .extra
                 if is_model
-                    a.ui.circular.button.route_model(href="/m/#{slug}")
+                    a.ui.button.route_model(href="/m/#{slug}")
                         i.sitemap.icon
                         |view model
                     if is_admin
-                        a.ui.circular.button.route_model(href="/model/edit/#{_id}")
+                        a.ui.button.route_model(href="/model/edit/#{_id}")
                             i.edit.icon
                             |edit model
                 else
                     if can_edit
-                        a.ui.circular.big.icon.basic.button(href="/m/#{current_model.slug}/#{_id}/edit" title='edit')
+                        a.ui.big.icon.button(href="/m/#{current_model.slug}/#{_id}/edit" title='edit')
                             i.pencil.large.icon
                             //- |edit
-                    a.ui.circular.icon.big.basic.button(href="/m/#{current_model.slug}/#{_id}/view" title='view')
+                    a.ui.icon.big.button(href="/m/#{current_model.slug}/#{_id}/view" title='view')
                         i.right.chevron.large.icon
                         //- |view
                     //- if is_post
